add default empty postcodes file path value

--- a/fias.input.loader/src/main/resources/config/application.properties
+++ b/fias.input.loader/src/main/resources/config/application.properties
@@ -3,6 +3,7 @@ fias_xml.url=http://fias.nalog.ru/Public/Downloads/%1$s/fias_xml.rar
 fias_delta_xml.url=http://fias.nalog.ru/Public/Downloads/%1$s/fias_delta_xml.rar
 fias_xml_version.url=http://fias.nalog.ru/Public/Downloads/Actual/VerDate.txt
 postcode_db.url=http://vinfo.russianpost.ru/database/PIndx.zip
+postcodes.file.path=
 bulk.size=400
 house.bulk.size=1000
 dbf.charset=CP866
