Add description for postcodes.file.path, fias.file.date

--- a/fias.input.loader/config/application.properties
+++ b/fias.input.loader/config/application.properties
@@ -1,17 +1,26 @@
 #Filter for region loader (comma separated region codes). Empty value for load without any filters
 region.filter=
 
-# Custom mapping regions from postcodes file to fias region code
+#Custom mapping regions from postcodes file to fias region code
 custom_region_codes=КАМЧАТСКИЙ:41,ЗАБАЙКАЛЬСКИЙ:75,ЧУВАШИЯ:21,ПЕРМСКИЙ:59
 
 #Elastic search rest api urls (comma separated)
 es.url=http://localhost:9200
 
-#flag to clean database before load (fullload)
+#Flag to clean database before load. If 'true', a full load will be made, not updating
 clean=false
 
-#bulk size for update address records
+#Bulk size for update address records
 bulk.size=400
 
-#bulk size for update houses records
+#Bulk size for update houses records
 house.bulk.size=1000
+
+#Path to postcodes file. If not not specified will be loaded from http://vinfo.russianpost.ru/database/PIndx.zip
+#postcodes.file.path=PIndx.zip
+
+#Path to fias xml db file for load. If not not specified will be loaded from http://fias.nalog.ru/Public/Downloads/
+#fias.file.path=fias_xml.rar
+
+#Date of fias db file which will be loaded. Used only with fias.file.path. Format: yyyyMMdd
+#fias.file.date=yyyyMMdd
