--- a/fias.input.loader/pom.xml
+++ b/fias.input.loader/pom.xml
@@ -45,6 +45,18 @@
 			<artifactId>javadbf</artifactId>
 			<version>0.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
