--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <logback.version>1.2.3</logback.version>
 		<elasticsearch.version>5.5.1</elasticsearch.version>
         <spring.version>4.3.11.RELEASE</spring.version>
+        <junit.version>4.12</junit.version>
 
     </properties>
     
