--- a/fias.input.web/pom.xml
+++ b/fias.input.web/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>tech.nikolaev</groupId>
 		<artifactId>fias.input</artifactId>
-		<version>1.0.0</version>
+		<version>1.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>fias.input.web</artifactId>
