add house mapping to address entity

--- a/fias.input.lib/src/main/resources/es/AddressMapping.json
+++ b/fias.input.lib/src/main/resources/es/AddressMapping.json
@@ -39,6 +39,13 @@
     "words": {
       "type": "text",
       "analyzer": "ru_analyzer"
+    },
+    "houses": {
+      "type": "text"
+    },
+    "numbers": {
+      "type": "text"
     }
+
   }
 }
